--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "htmltabletolatex",
   "version": "1.0.0",
-  "description": "Converting html tables to latex tables",
+  "description": "Converter html tables tables in latex",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
